Update code logic and structure -add decimal button functionality -fix display function to handle exponential and overflow -handle division by 0 error

--- a/style.css
+++ b/style.css
@@ -43,3 +43,11 @@
     margin: 6px;
     box-sizing: border-box;
 }
+
+.pressed{
+    height: 60px;
+    width: 60px;
+    margin: 6px;
+    box-sizing: border-box;
+    background-color: brown;
+}
